--- a/docs/documentation/head/template/index.html
+++ b/docs/documentation/head/template/index.html
@@ -33,19 +33,8 @@
 
 <p>
   This is a <b>2ndQuadrant patched version of PgJDBC</b>.
-  See <a href="2ndq.html">2ndQ release notes</a> for details.
-  The jar file name follows the pattern
-  <tt>secondquadrant-postgres-${version}.jar</tt> not PgJDBC upstream's
-  <tt>postgresql-${version}.jar</tt>. Maven users must use the maven
-  co-ordinates <tt>com.secondquadrant:secondquadrant-postgres:${project.version}</tt>
-  rather than PgJDBC's <tt>org.postgresql:postgresql:${project.version}</tt>, e.g.:
-<pre>
-  &lt;dependency&gt;
-    &lt;groupId&gt;${project.groupId}&lt;/groupId&gt;
-    &lt;artifactId&gt;${project.artifactId}&lt;/artifactId&gt;
-    &lt;version&gt;${project.version}&lt;/version&gt;
-  &lt;/dependency&gt;
-</pre>
+  See <a href="2ndq.html">2ndQ release notes</a> for details, and 
+  <a href="setup.html">for installation information and Maven co-ordinates</a>.
 </p>
 
 					<div class="TOC">
